Components-I Jerrard Smith Complete

--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
           hodor, hodor hodor, hodor, hodor hodor. Hodor hodor - hodor - hodor... Hodor hodor hodor hodor hodor hodor hodor?! Hodor
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
+        </div>
+
+        <div class ="article">
+            <h2>Lovely Lovely Littles!</h2>
+            <p class = "date">Oct 21st, 1995</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin sagittis nisl rhoncus mattis rhoncus urna. Ullamcorper morbi tincidunt ornare massa eget egestas. Nunc sed velit dignissim sodales ut eu sem integer vitae. Ultrices vitae auctor eu augue ut lectus arcu bibendum. Tincidunt eget nullam non nisi. Sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Neque viverra justo nec ultrices dui sapien. Egestas erat imperdiet sed euismod nisi porta lorem mollis aliquam. Non pulvinar neque laoreet suspendisse interdum. Amet mauris commodo quis imperdiet massa tincidunt. Ipsum faucibus vitae aliquet nec ullamcorper sit amet. Mollis nunc sed id semper risus in hendrerit gravida rutrum. Pharetra et ultrices neque ornare aenean. Mattis aliquam faucibus purus in massa tempor nec feugiat. Sollicitudin nibh sit amet commodo nulla facilisi. In vitae turpis massa sed. Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus. Nullam ac tortor vitae purus faucibus ornare suspendisse.</p>
+            <span class = 'expandButton'></span>
       </div>
     </div>
   </body>
